k8s/init-download.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-download-pod
spec:
  containers:
    - name: main-app
      image: busybox:1.36
      command: ["sh", "-c", "cat /data/index.html && sleep 3600"]
      volumeMounts:
        - name: shared-data
          mountPath: /data
  volumes:
    - name: shared-data
      emptyDir: {}
