k8s/service-go.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-service-go
  labels:
    app: devops-info-service-go
spec:
  type: NodePort
  selector:
    app: devops-info-service-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30090
