k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - local.example.com
    secretName: tls-secret
  rules:
  - host: local.example.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: devops-info-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: devops-info-service-go
            port:
              number: 80
